@@ -12,6 +12,7 @@ libnetclient_a_sources = [
   ]
 
 libnetclient_a = static_library('netclient', libnetclient_a_sources,
+                                c_args              : '-DG_LOG_DOMAIN="libnetclient"',
                                 dependencies        : libnetclient_deps,
                                 include_directories : top_include,
                                 install             : false)
