@@ -1,3 +1,12 @@
+2018-01-20  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	Meson build system changes to mirror the autotools changes in
+	the previous commit
+
+	* libnetclient/meson.build: add c_args: '-DG_LOG_DOMAIN="libnetclient"'
+	to static_library arguments.
+	* meson.build: drop sed and ncat prerequisites.
+
 2018-01-20  Albrecht Dreß <albrecht.dress@arcor.de>
 
 	Improve low-level network library, POP3 responsiveness on error
